[package]
name = "combine_rust"
version = "0.1.3"
edition = "2018"
description = "combine for rust (only the client)"
license = "MIT"
include = ["README.md", "src/combine.rs", "Cargo.toml", "src/lib.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.59"